Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-43700

mutations for collection 0xff not received in filtered DCP stream

    XMLWordPrintable

Details

    • Triaged
    • 1
    • Unknown
    • KV-Engine 2021-Jan

    Description

      For some reason, when creating a DCP connection filtering collection w/ id 0xff, mutations are not sent to the client.

      Repro steps:

      1. Create bucket testBucket
      2. Create scope myScope on testBucket
      3. Create enough collections on testBucket.myScope to ensure collection id advances to 0x100
      4. Import single element into each of collection w/ cid 0xfe, 0xff, 0x100
      5. Open 3 dcp streams, filtering 0xfe, 0xff, 0x100 respectively
      6. Observe mutation sent to streams filtering on 0xfe & 0x100, but not for 0xff.

      see attached cbcollect_infos, after running the above (n_0 -> data, n_1 -> analytics)

      Marking as blocker, as this is blocking Analytics blocker issue, MB-43283

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              michael.blow Michael Blow
              michael.blow Michael Blow
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty